syntax = "proto3";

package com.paylocity.deduction.api.v1;

option go_package = "github.com/yuanbing/paylocity/deduction/api/v1";


// ComputeDeductionRequest represents a request for computing the deduction amount
message ComputeDeductionRequest {
  string employee_name = 1;
  message dependent {
    string name = 1;
  }
  repeated dependent dependents = 2; 
}

// ComputeDeductionResponse represents a response of list of deductions (one per pay check)
// The list is sorted by the paycheck_no ascendingly.
message ComputeDeductionResponse {
  double total_cost = 1;
  message deduction {
    int32 paycheck_no = 1;
    double deduction_amount = 2;
  }
  repeated deduction detail = 2;
}

/* DeductionService computes the deduction amount (one per paycheck) for one
 * employee.
*/
service DeductionService {
  rpc ComputeDeduction(ComputeDeductionRequest) returns (ComputeDeductionResponse);
}